samples/_failures_safe/1761532767_2176e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_179bda2e.c: In function ‘main’:
./samples/SAFE/__tmp_179bda2e.c:170:38: error: missing terminating " character
  170 |             case STATE_READY: printf("READY
      |                                      ^~~~~~
./samples/SAFE/__tmp_179bda2e.c:170:13: error: expected expression at end of input
  170 |             case STATE_READY: printf("READY
      |             ^~~~
./samples/SAFE/__tmp_179bda2e.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_179bda2e.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_179bda2e.c:170:13: error: expected declaration or statement at end of input
